kotlin-parser/src/test/semlang/validatorTests/fail/naturalLiteral7.sem
function myStuff.myFunction(): Natural {
  return Natural."abcd"
}
